Update features on bookmarks page

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -16,19 +16,18 @@
         <!--============ MAIN SECTION WITH QUIZ CARDS =============-->
         <main class="main-content">
             <section class="question-cards">
-                <div id="container">
+                <div class="cards">
                     <section class="card">
-                        <button class="bookmark filled">
-                            <img src="./images/bookmark_filled.png" />
+                        <button class="bookmark filled bookmark--active">
+                            <img src="./images/bookmark_filled.png" id="myImage"/>
                         </button>
                         <h4>Question 1</h4>
                         <p>
                             How do you center content horizontally?
                         </p>
                         <button class="show-answer">Show Answer</button>
-                        <button class="hide-answer" style="display: none;">Hide Answer</button>
+                        <button class="hide-answer" style="display: none;">Hide Answer</button>   
                         <div class="answer">Flexbox justify-content center</div>
-                        <script src="./script.js"></script>
                         <ul class="list-tags">
                             <li class="list-item-tags">#html</li>
                             <li class="list-item-tags">#css</li>
@@ -36,8 +35,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark filled">
-                            <img src="./images/bookmark_filled.png" />
+                        <button class="bookmark filled bookmark--active">
+                            <img src="./images/bookmark_filled.png" id="myImage"/>
                         </button>
                         <h4>Question 2</h4>
                         <p>
@@ -46,16 +45,16 @@
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">Using Absolute positioning</div>
-                        <script src="./script.js"></script>   
                         <ul class="list-tags">
                             <li class="list-item-tags">#html</li>
                             <li class="list-item-tags">#css</li>
                             <li class="list-item-tags">#easy</li>
                         </ul>
                     </section>
+                    
                     <section class="card">
-                        <button class="bookmark filled">
-                            <img src="./images/bookmark_filled.png" />
+                        <button class="bookmark filled bookmark--active">
+                            <img src="./images/bookmark_filled.png" id="myImage"/>
                         </button>
                         <h4>Question 6</h4>
                         <p>
@@ -64,15 +63,14 @@
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">mkdir</div>
-                        <script src="./script.js"></script>
                         <ul class="list-tags">
                             <li class="list-item-tags">#git</li>
                             <li class="list-item-tags">#terminal</li>
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark filled">
-                            <img src="./images/bookmark_filled.png" />
+                        <button class="bookmark filled bookmark--active">
+                            <img src="./images/bookmark_filled.png" id="myImage"/>
                         </button>
                         <h4>Question 7</h4>
                         <p>
@@ -81,7 +79,6 @@
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">git init</div>
-                        <script src="./script.js"></script>
                         <ul class="list-tags">
                             <li class="list-item-tags">#git</li>
                             <li class="list-item-tags">#terminal</li>
