Update profile page

--- a/profile.html
+++ b/profile.html
@@ -17,13 +17,10 @@
         <main class="main-content">
             <section class="profile--details">
                 <h3>Arunima Venkatesan</h3>
-
                 <p>
                     Enthusiatic FSD; Learning Everyday; Coffee lover
                 </p>
-
                 <img src="./images/profileImg.jpg" id="profileImg" alt="Img" width="100px" />
-
                 <div class="personal--details dob">
                     Date of birth: 04-June-1994
                 </div>
@@ -35,6 +32,9 @@
                 </div>
                 <div class="personal--details github">
                     Website: <a href="https://github.com/v-aru" alt="Github"> GitHub </a>
+                </div>
+                <div class="profile--details location">
+                    Located in: Berlin 
                 </div>
             </section>
         </main>
