Update profile page and some styling and navigation

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="/css/style.css"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
         <title>Recap Project 1 : QuizApp </title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
@@ -89,15 +90,12 @@
             </section>
         </main>
 
-        <footer>
-            <div class="footerContainer">
-                <nav class="navbar">
-                    <a class="navbar-link-home" href="./index.html"><img src="./images/home_filled.png" alt="Home"/></a>
-                    <a class="navbar-link-bookmarks" href="#"><img src="./images/bookmark_transparent.png" alt="Bookmarks"/></a>
-                    <a class="navbar-link-profile" href="./profile.html"><img src="./images/profile.png" alt="myProfile"></a>
-                </nav>
-            </div>
-            
+        <footer class="navigation">
+            <ul class="navigation--list">
+                <li class="navigation--item"><a class="navbar-link-home" href="./index.html"><i class="fa-solid fa-house fa-fw"></i></a></li>
+                <li class="navigation--item"><a class="navbar-link-bookmarks" href="#"><i class="fa-duotone fa-solid fa-bookmark fa-fw"></i></a></li>
+                <li class="navigation--item"><a class="navbar-link-profile" href="./profile.html"><i class="fa-duotone fa-solid fa-user fa-fw"></i></a></li>
+            </ul>
         </footer>
 
     </body>
