Update bookmark button and answer button functionalities

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -11,7 +11,7 @@
         <!--============ HEADER WITH THE NAME QUIZ APP =============-->
         <header class="main-header">
             <p class="app-header">
-                <h1>QUIZ APP</h1>
+                <h1>BOOKMARKS <i class="fa-duotone fa-solid fa-bookmark" style="--fa-primary-opacity: 1; --fa-secondary-opacity: 00.4;"></i> </h1>
             </p>
         </header>
         <!--============ MAIN SECTION WITH QUIZ CARDS =============-->
@@ -19,8 +19,8 @@
             <section class="question-cards">
                 <div class="cards">
                     <section class="card">
-                        <button class="bookmark filled bookmark--active">
-                            <img src="./images/bookmark_filled.png" id="myImage"/>
+                        <button class="add-to-bookmark filled ">
+                            <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 1</h4>
                         <p>
@@ -36,8 +36,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark filled bookmark--active">
-                            <img src="./images/bookmark_filled.png" id="myImage"/>
+                        <button class="add-to-bookmark filled">
+                            <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 2</h4>
                         <p>
@@ -52,10 +52,9 @@
                             <li class="list-item-tags">#easy</li>
                         </ul>
                     </section>
-                    
                     <section class="card">
-                        <button class="bookmark filled bookmark--active">
-                            <img src="./images/bookmark_filled.png" id="myImage"/>
+                        <button class="add-to-bookmark filled">
+                            <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 6</h4>
                         <p>
@@ -70,8 +69,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark filled bookmark--active">
-                            <img src="./images/bookmark_filled.png" id="myImage"/>
+                        <button class="add-to-bookmark filled">
+                            <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 7</h4>
                         <p>
@@ -86,7 +85,7 @@
                         </ul>
                     </section>
                 </div>
-                
+                <script src="./js/script.js"></script>
             </section>
         </main>
 
