--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link rel="stylesheet" href="/css/style.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
-        <title>Recap Project 1 : QuizApp </title>
+        <title>Recap Project: Arunima's QuizApp </title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     </head>
@@ -11,7 +11,7 @@
         <!--============ HEADER WITH THE NAME QUIZ APP =============-->
         <header class="main-header">
             <p class="app-header">
-                <h1>QUIZ APP</h1>
+                <h1>QUIZ APP <i class="fa-duotone fa-solid fa-messages-question"></i></h1>
             </p>
         </header>
         <!--============ MAIN SECTION WITH QUIZ CARDS =============-->
@@ -19,8 +19,8 @@
             <section class="question-cards">
                 <div class="cards">
                     <section class="card">
-                        <button class="bookmark filled bookmark--active">
-                            <img src="./images/bookmark_filled.png" id="myImage"/>
+                        <button class="add-to-bookmark filled ">
+                            <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 1</h4>
                         <p>
@@ -36,8 +36,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark filled bookmark--active">
-                            <img src="./images/bookmark_filled.png" id="myImage"/>
+                        <button class="add-to-bookmark filled">
+                            <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 2</h4>
                         <p>
@@ -53,8 +53,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark empty">
-                            <img src="./images/bookmark_transparent.png" id="myImage"/>
+                        <button class="add-to-bookmark empty">
+                            <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 3</h4>
                         <p>
@@ -70,8 +70,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark empty">
-                            <img src="./images/bookmark_transparent.png" id="myImage"/>
+                        <button class="add-to-bookmark empty">
+                            <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 4</h4>
                         <p>
@@ -86,8 +86,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark empty">
-                            <img src="./images/bookmark_transparent.png" id="myImage"/>
+                        <button class="add-to-bookmark empty">
+                            <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 5</h4>
                         <p>
@@ -102,8 +102,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark filled bookmark--active">
-                            <img src="./images/bookmark_filled.png" id="myImage"/>
+                        <button class="add-to-bookmark filled">
+                            <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 6</h4>
                         <p>
@@ -118,8 +118,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark filled bookmark--active">
-                            <img src="./images/bookmark_filled.png" id="myImage"/>
+                        <button class="add-to-bookmark filled">
+                            <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 7</h4>
                         <p>
@@ -134,8 +134,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark empty">
-                            <img src="./images/bookmark_transparent.png" id="myImage"/>
+                        <button class="add-to-bookmark empty">
+                            <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 8</h4>
                         <p>
@@ -151,8 +151,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark empty">
-                            <img src="./images/bookmark_transparent.png" id="myImage"/>
+                        <button class="add-to-bookmark empty">
+                            <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 9</h4>
                         <p>
@@ -168,8 +168,8 @@
                         </ul>
                     </section>
                     <section class="card">
-                        <button class="bookmark empty">
-                            <img src="./images/bookmark_transparent.png" id="myImage"/>
+                        <button class="add-to-bookmark empty">
+                            <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
                         <h4>Question 10</h4>
                         <p>
@@ -185,7 +185,7 @@
                         </ul>
                     </section>
                 </div>
-                <script src="./script.js"></script>
+                <script src="./js/script.js"></script>
             </section>
         </main>
 
