--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,7 @@
             <h1>PROFILE 🙋🏻‍♀️</h1>
         </header>
         <!--============ MAIN SECTION WITH QUIZ CARDS =============-->
-        <main class="profile-page">
+        <main class="profile--page">
             <section class="profile--card"> 
                 <h2> ABOUT ME</h2>
                 <img src="./images/work-setup.jpg" id="profileImg" alt="Img" width="100px" alt="use profile"/>
