Update form.html and styling

--- a/bookmarks.html
+++ b/bookmarks.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/css/style.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
-        <title>Recap Project 1 : QuizApp </title>
+        <title>Recap Project: Arunima's QuizApp </title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     </head>
@@ -22,10 +22,8 @@
                         <button class="add-to-bookmark filled ">
                             <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 1</h4>
-                        <p>
-                            How do you center content horizontally?
-                        </p>
+                        <h4> How do you center content horizontally? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>   
                         <div class="answer">Flexbox justify-content center</div>
@@ -39,10 +37,8 @@
                         <button class="add-to-bookmark filled">
                             <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 2</h4>
-                        <p>
-                            How do you Position element outside flow?
-                        </p>
+                        <h4> How do you Position element outside flow? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">Using Absolute positioning</div>
@@ -56,10 +52,8 @@
                         <button class="add-to-bookmark filled">
                             <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 6</h4>
-                        <p>
-                            What command allows me to create a directory from the terminal?
-                        </p>
+                        <h4>What command allows me to create a directory from the terminal? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">mkdir</div>
@@ -72,10 +66,8 @@
                         <button class="add-to-bookmark filled">
                             <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 7</h4>
-                        <p>
-                            What is the command to create a local repository?
-                        </p>
+                        <h4>What is the command to create a local repository?</h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">git init</div>
@@ -91,9 +83,26 @@
 
         <footer class="navigation">
             <ul class="navigation--list">
-                <li class="navigation--item"><a class="navbar-link-home" href="./index.html"><i class="fa-solid fa-house fa-fw"></i></a></li>
-                <li class="navigation--item"><a class="navbar-link-bookmarks" href="#"><i class="fa-duotone fa-solid fa-bookmark fa-fw"></i></a></li>
-                <li class="navigation--item"><a class="navbar-link-profile" href="./profile.html"><i class="fa-duotone fa-solid fa-user fa-fw"></i></a></li>
+                <li class="navigation--item">
+                    <a class="navbar-link-home" href="./index.html">
+                        <i class="fa-solid fa-house fa-fw"></i>
+                    </a>
+                </li>
+                <li class="navigation--item">
+                    <a class="navbar-link-bookmarks" href="#">
+                        <i class="fa-duotone fa-solid fa-bookmark fa-fw"></i>
+                    </a>
+                </li>
+                <li class="navigation--item">
+                    <a href="./form.html" class="navbar-link-form">
+                        <i class="fa-sharp fa-solid fa-square-plus"></i>
+                    </a>
+                </li>
+                <li class="navigation--item">
+                    <a class="navbar-link-profile" href="./profile.html">
+                        <i class="fa-duotone fa-solid fa-user fa-fw"></i>
+                    </a>
+                </li>
             </ul>
         </footer>
 
