--- a/profile.html
+++ b/profile.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/css/style.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
-        <title>Recap Project 1 : QuizApp </title>
+        <title>Recap Project: Arunima's QuizApp </title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     </head>
@@ -59,9 +59,26 @@
 
         <footer class="navigation">
             <ul class="navigation--list">
-                <li class="navigation--item"><a class="navbar-link-home" href="./index.html"><i class="fa-solid fa-house fa-fw"></i></a></li>
-                <li class="navigation--item"><a class="navbar-link-bookmarks" href="./bookmarks.html"><i class="fa-duotone fa-solid fa-bookmark fa-fw"></i></a></li>
-                <li class="navigation--item"><a class="navbar-link-profile" href="#"><i class="fa-duotone fa-solid fa-user fa-fw"></i></a></li>
+                <li class="navigation--item">
+                    <a class="navbar-link-home" href="./index.html">
+                        <i class="fa-solid fa-house fa-fw"></i>
+                    </a>
+                </li>
+                <li class="navigation--item">
+                    <a class="navbar-link-bookmarks" href="./bookmarks.html">
+                        <i class="fa-duotone fa-solid fa-bookmark fa-fw"></i>
+                    </a>
+                </li>
+                <li class="navigation--item">
+                    <a href="./form.html" class="navbar-link-form">
+                        <i class="fa-sharp fa-solid fa-square-plus"></i>
+                    </a>
+                </li>
+                <li class="navigation--item">
+                    <a class="navbar-link-profile" href="#">
+                        <i class="fa-duotone fa-solid fa-user fa-fw"></i>
+                    </a>
+                </li>
             </ul>
         </footer>
 
