--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/css/style.css"/>
+        <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
         <title>Recap Project: Arunima's QuizApp </title>
         <meta charset="utf-8" />
@@ -22,10 +22,8 @@
                         <button class="add-to-bookmark filled ">
                             <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 1</h4>
-                        <p>
-                            How do you center content horizontally?
-                        </p>
+                        <h4> How do you center content horizontally? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>   
                         <div class="answer">Flexbox justify-content center</div>
@@ -39,10 +37,8 @@
                         <button class="add-to-bookmark filled">
                             <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 2</h4>
-                        <p>
-                            How do you Position element outside flow?
-                        </p>
+                        <h4> How do you Position element outside flow? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">Using Absolute positioning</div>
@@ -56,10 +52,8 @@
                         <button class="add-to-bookmark empty">
                             <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 3</h4>
-                        <p>
-                            What are some of the values can the does the display property hold?
-                        </p>
+                        <h4> What are some of the values can the does the display property hold? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">inline, block, flex, grid, inline-block</div>
@@ -73,10 +67,8 @@
                         <button class="add-to-bookmark empty">
                             <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 4</h4>
-                        <p>
-                            What command allows me to create a file in a folder via the terminal?
-                        </p>
+                        <h4> What command allows me to create a file in a folder via the terminal? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">touch</div>
@@ -89,10 +81,8 @@
                         <button class="add-to-bookmark empty">
                             <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 5</h4>
-                        <p>
-                            What is the command to navigate into a folder?
-                        </p>
+                        <h4> What is the command to navigate into a folder? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">cd</div>
@@ -105,10 +95,8 @@
                         <button class="add-to-bookmark filled">
                             <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 6</h4>
-                        <p>
-                            What command allows me to create a directory from the terminal?
-                        </p>
+                        <h4> What command allows me to create a directory from the terminal? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">mkdir</div>
@@ -121,10 +109,7 @@
                         <button class="add-to-bookmark filled">
                             <i class="fa-solid fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 7</h4>
-                        <p>
-                            What is the command to create a local repository?
-                        </p>
+                        <h4> What is the command to create a local repository? </h4>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">git init</div>
@@ -137,10 +122,8 @@
                         <button class="add-to-bookmark empty">
                             <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 8</h4>
-                        <p>
-                            How do you make visually hidden content?
-                        </p>
+                        <h4> How do you make visually hidden content? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">Via Screen reader accessiblility</div>
@@ -154,10 +137,8 @@
                         <button class="add-to-bookmark empty">
                             <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 9</h4>
-                        <p>
-                            What will the justify-content : center command do?
-                        </p>
+                        <h4> What will the justify-content : center command do? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">aligns the flexible container's items when the items do not use all available space on the main-axis (horizontally)</div>
@@ -171,10 +152,8 @@
                         <button class="add-to-bookmark empty">
                             <i class="fa-regular fa-bookmark fa-2xl"></i>
                         </button>
-                        <h4>Question 10</h4>
-                        <p>
-                            What css property allows me to align text in a container?
-                        </p>
+                        <h4>What css property allows me to align text in a container? </h4>
+                        <br/>
                         <button class="show-answer">Show Answer</button>
                         <button class="hide-answer" style="display: none;">Hide Answer</button>
                         <div class="answer">text-align</div>
@@ -191,9 +170,26 @@
 
         <footer class="navigation">
             <ul class="navigation--list">
-                <li class="navigation--item"><a class="navbar-link-home" href="#"><i class="fa-solid fa-house fa-fw"></i></a></li>
-                <li class="navigation--item"><a class="navbar-link-bookmarks" href="./bookmarks.html"><i class="fa-duotone fa-solid fa-bookmark fa-fw"></i></a></li>
-                <li class="navigation--item"><a class="navbar-link-profile" href="./profile.html"><i class="fa-duotone fa-solid fa-user fa-fw"></i></a></li>
+                <li class="navigation--item">
+                    <a class="navbar-link-home" href="#">
+                        <i class="fa-solid fa-house fa-fw"></i>
+                    </a>
+                </li>
+                <li class="navigation--item">
+                    <a class="navbar-link-bookmarks" href="./bookmarks.html">
+                        <i class="fa-duotone fa-solid fa-bookmark fa-fw"></i>
+                    </a>
+                </li>
+                <li class="navigation--item">
+                    <a class="navbar-link-form" href="./form.html">
+                        <i class="fa-sharp fa-solid fa-square-plus"></i>
+                    </a>
+                </li>
+                <li class="navigation--item">
+                    <a class="navbar-link-profile" href="./profile.html">
+                        <i class="fa-duotone fa-solid fa-user fa-fw"></i>
+                    </a>
+                </li>
             </ul>
         </footer>
 
