CSS Styling update

--- a/form.html
+++ b/form.html
@@ -7,9 +7,9 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     </head>
-    <body>
+    <body data-js="body">
         <!--============ HEADER WITH THE NAME QUIZ APP =============-->
-        <header class="page-header">
+        <header class="main-header">
             <h1>FORM 📝</h1>
         </header>
         <!--============ MAIN SECTION WITH QUIZ CARDS =============-->
