--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <body>
         <!--============ HEADER WITH THE NAME QUIZ APP =============-->
         <header class="main-header">
-            <p class="app-header">
-                <h1>QUIZ APP <i class="fa-duotone fa-solid fa-messages-question"></i></h1>
-            </p>
+            <h1><i class="fa-solid fa-wand-magic-sparkles fa-fade"></i> QUIZ APP <i class="fa-solid fa-wand-magic-sparkles fa-fade"></i></h1>
         </header>
         <!--============ MAIN SECTION WITH QUIZ CARDS =============-->
         <main class="main-content">
