Update styling and adding dark mode functionality

--- a/form.html
+++ b/form.html
@@ -42,9 +42,12 @@
                     </label>
 
                     <ul class="info" data-js="info" data-status="confirm"></ul>
-                    <button type="submit" class="button">
-                        <span>SUBMIT</span>
-                    </button>
+                    <div class="container">
+                        <button type="submit" class="button">
+                            <span>SUBMIT</span>
+                        </button>
+                    </div>
+                    
 
 
                 </form>            
